examples/delpoy-nginx-with-certificate/k3s-config/40-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-nginx
  namespace: examples
  labels:
    app: example-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: example-nginx
  template:
    metadata:
      labels:
        app: example-nginx
    spec:
      containers:
        - name: example-nginx
          image: registry.k3s.l4b.space/fount-nginx-with-certificate-example
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          resources:
            requests:
              memory: 64M
              cpu: 100m
            limits:
              memory: 64M
              cpu: 100m
