examples/delpoy-nginx-with-certificate/k3s-config/10-services.yml
---
apiVersion: v1
kind: Service
metadata:
  name: example-nginx
  namespace: examples
  labels:
    app: example-nginx
spec:
  selector:
    app: example-nginx
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
