examples/delpoy-nginx-with-certificate/k3s-config/50-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-nginx
  namespace: examples
  labels:
    app: example-nginx
  annotations:
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  rules:
    - host: nginx.examples.k3s.l4b.space
      http:
        paths:
          - backend:
              service:
                name: example-nginx
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - nginx.examples.k3s.l4b.space
      secretName: example-nginx-tls
